// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons / ProgressButton Disabled Story 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <button
      className="button button--size-normal progress-button "
      disabled={true}
    >
      <div
        className="progress-button__content"
      >
        Payer
      </div>
      <div
        className="progress-button__progress-bar"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons / ProgressButton Finished Story 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <button
      className="button button--size-normal progress-button "
      disabled={true}
    >
      <div
        className="progress-button__content"
      >
        Payer
      </div>
      <div
        className="progress-button__progress-bar progress-button__progress-bar--finished"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons / ProgressButton Loading Story 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <button
      className="button button--size-normal progress-button "
      disabled={true}
    >
      <div
        className="progress-button__content"
      >
        Payer
      </div>
      <div
        className="progress-button__progress-bar progress-button__progress-bar--loading"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons / ProgressButton Main 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <button
      className="button button--size-normal progress-button "
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="progress-button__content"
      >
        Payer
      </div>
      <div
        className="progress-button__progress-bar"
      />
    </button>
  </div>
</div>
`;
